search page: filter is now an accordion item -> no longer overlaps with search results; users have a gap between them

--- a/xekkit/html/css/search.css
+++ b/xekkit/html/css/search.css
@@ -1,8 +1,3 @@
-aside{
-    position: sticky;
-    top: 60px;
-}
-
 .form-select{
     background-color: rgb(43, 43, 43);
 }
@@ -51,13 +46,4 @@ aside{
 .clear-all{
     float: right;
     display: block;
-}
-
-@media (min-width: 1000px){
-    .search {
-        display: grid;
-        gap: 1rem;
-        grid-template-columns: 2fr 4fr;
-        grid-template-rows: auto;
-    }
 }
